# onepassvault

./: README.md  pyproject.toml
clickio/: README.md  core.py  input.py  msgevent.py  option.py  output.py  style.py
onepassvault/: __main__.py  credentials.py  func.py  kv.py  userio.py  vault.py
onepassvault/opw/: __init__.py  client.py  schema.py
tests/integration/: conftest.py  test_opw_document.py  test_opw_item.py  test_opw_signin.py  test_opw_vault.py
